logs/qpm.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/qpm'...
Listing './lib/python3.5/site-packages/qpm/packaging'...
Compiling './lib/python3.5/site-packages/qpm/packaging/driver_packager.py'...
***   File "./lib/python3.5/site-packages/qpm/packaging/driver_packager.py", line 113
    print 'Creating script {0} version {1}'.format(zip_name, version)
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qpm/packaging/shell_packager.py'...
***   File "./lib/python3.5/site-packages/qpm/packaging/shell_packager.py", line 10
    print "Packaging {0}.zip".format(package_name)
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qpm/packaging/shell_publisher.py'...
***   File "./lib/python3.5/site-packages/qpm/packaging/shell_publisher.py", line 6
    print 'Publishing a package is on our roadmap, follow us on twitter to get updated'
                                                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/qpm-1.19.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
